--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,14 @@
     padding: 5px;
     font-size: large;
 }
+.nav ul{
+    display: flex;
+    margin-bottom: 0px;
+}
+.nav ul li{
+    list-style: none;
+    padding: 5px;
+}
 .article{
     background-color: chartreuse;
     padding: 10px;
@@ -26,7 +34,12 @@
 }
 .side{
     background-color: cadetblue;
+    border: 1px dashed darkviolet;
 }
 .footer{
     background-color: coral;
+}
+
+.row{
+    border:2px solid red;
 }
