--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,20 @@
 .blue{
     background-color: blue;
 }
+
+.pink{
+    background-color: pink;
+    border: 2px solid palevioletred;
+    padding: 5px;
+}
+.pink-2{
+    background-color: rgb(231, 151, 165);
+    border: 2px solid rgb(223, 63, 116);
+    padding: 5px;
+}
+.col-4{
+    border: 1px solid red;
+    padding: 5px;
+    background-color: chartreuse;
+}
+
