--- a/css/one.css
+++ b/css/one.css
@@ -1,10 +1,26 @@
 a:hover {
     text-decoration: none;
 }
+.section{
+    padding-top: 50px ;
+ 
+    padding-bottom: 50px ;
+}
+.heading h2::after{
+    content: '';
+    background-color: #8e44ad;
+    width: 100px;
+    height: 3px;
+    display: block;
+    margin: 10px auto;
+}
+
 
 .header {
     background-color: #9b59b6;
 }
+
+
 
 #logo {
     font-size: 1.2rem;
@@ -50,11 +66,79 @@ a:hover {
 #banner .container{
     padding-top: 7rem;
 }
-#banner .col-lg-6{
+#banner .col6{
     background: rgba(142, 68, 173,0.7);
     color: white;
     border-radius: 4px;
 }
-#banner .col-lg-6 h1{
+#banner .col6 h1{
     font-size: 1.5rem;
+}
+
+.services{
+    text-align: center;
+}
+
+.services i.fa-solid{
+    color: #8e44ad;
+    font-size: 70px;
+    margin-bottom: 25px;
+}
+
+.second{
+    background-image: url('../img/testemonial.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* height: 400px; */
+    width: 100%;
+}
+
+.second .row{
+    color: white;
+}
+.second .width{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.name{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.second-p{
+    font-size: 18px;
+    line-height: 20px;
+    background-color: rgb(121, 39, 156, 0.4);
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #8e44ad;
+}
+
+
+.recent .px-2{
+    border: 1px solid #9b59b6;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 10px;
+}
+.recent .px-2:hover{
+background-color: #9b59b6;
+color: white;
+transition: all;
+transition-duration: 200ms;
+}
+.recent img{
+    margin-left: 20px;
+}
+
+.footer{
+    background-color: rgb(46, 42, 42);
+    color: white;
+}
+.copyright{
+    background-color: rgb(37, 37, 37);
+    color: white;
 }
