--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,17 @@ ul li a{
     color: white;
     text-decoration: none;
 }
+
+
+
+.img{
+    background-image: url('../img/iloveimg-compressed/banner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 200px;
+    width: 100%;
+}
+.img h1{
+    font-size: 90px;
+    font-weight: 800;
+}
